--- a/src/main/java/fxml/Materiales/Racks/Racks.fxml
+++ b/src/main/java/fxml/Materiales/Racks/Racks.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.RacksController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.RacksController">
    <children>
       <Pane prefHeight="50.0" prefWidth="243.0">
          <children>
@@ -77,7 +77,7 @@
                                        </image>
                                     </ImageView>
                                  </graphic></Button>
-                              <Button contentDisplay="TOP" layoutX="43.0" layoutY="129.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="90.0" text="Retirar">
+                              <Button contentDisplay="TOP" layoutX="43.0" layoutY="129.0" mnemonicParsing="false" onAction="#retirarProducto" prefHeight="71.0" prefWidth="90.0" text="Retirar">
                                  <graphic>
                                     <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
